--- a/Workbook.Rmd
+++ b/Workbook.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Demonstrating the newspaper API"
+title: "Text Mining St. Croix Avis 1878"
 author: "Max Odsbjerg Pedersen"
 date: "3/15/2021"
 output: html_document
