--- a/notebooks/CompletedWorkbook.Rmd
+++ b/notebooks/CompletedWorkbook.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Demonstrating the newspaper API"
+title: "Text Mining St. Croix Avis 1878"
 author: "Max Odsbjerg Pedersen"
 date: "3/15/2021"
 output: html_document
@@ -27,7 +27,6 @@ https://www.r-project.org/
 ```{r, message=FALSE}
 library(tidyverse)
 library(tidytext)
-library(lubridate)
 library(ggwordcloud)
 ```
 
